<resources>
    <string name="app_name">Maximo</string>
    <string name="desc">"This is a meticulously designed 3 bhk resale apartment located in prabhadevi dadar (West) dadar, mumbai south. It is a freehold property. The flat is a spacious property and is under construction. Possession of the property is expected by 2021. Located in an integrated society of sona asteria heights, it has 3 bathroom(s). It is located on the 17th floor. Full power back up. The unit is located in a gated society. The property offers specifications such as club house/community center, fitness centre/gym, intercom facility, lift(s), park and rain water harvestin. The apartment is approximately priced at rs. 5. 5 cr and its per sq. Meter cost is rs. 448066. 1 covered parking is also available."</string>
    <string name="ec1">The long-term capital gains (LTCG) on sale of property and other capital assets are taxable mostly after indexation  but may be saved through some specific ways. One of the best ways to save tax is through investments in 54EC Bonds, which is commonly known as Capital Gain Bonds as tax deduction is available under section 54EC of the Income Tax Act.</string>
    <string name="ec2">The 54EC bonds are not only AAA rated (Risk free investments), but are backed by the government also, hence the risk factor associated with buying 54EC bonds is mitigated.</string>
    <string name="ec3">Individuals as well as members of HUF can make investments in 54EC bonds. You should invest in 54EC bonds within 6 months of transferring capital assets. Take a look at the benefits of investing in 54EC bonds.</string>
    <string name="ec4">With effect from FY 2018\-19, benefit of investing in 54EC bonds would be available on sale of land or building (residential or commercial). The capital gains 54EC bonds eligible for tax deductions can be issued only by</string>
    <string name="ec5">A sudden influx of cash due to a sale of property or other capital assets can attract a very high tax and can take a huge chunk away from your capital gains. 54 EC Capital Gains bonds are a really good investment option which can save your gains from taxes at the same time provide you a steady return on investment till the 5 year maturity period with very low risk.</string>
    <string name="rbi1">The Government will launch Floating Rate Savings Bonds 2020 (Taxable) scheme with an interest rate of 7.15 percent from July 1, 2020. As per RBI, its interest rates would be reset every six months. The launch of the bonds was announced after the withdrawal of Taxable Bonds, offering a fixed interest rate of 7.75 percent, on May 28, 2020.</string>
    <string name="rbi2">For the newly launched Floating Rate Savings Bonds 2020, the interest amount is payable every six months and after which the interest rate would be reset. Its first interest rate reset would happen on January 1, 2021.</string>
    <string name="rbi3">The change in the interest rate is pegged with the prevailing National Saving Certificate (NSC) rate. That is, the rates would be adjusted as 35 basis points over the prevailing NSC rate.For example, the prevailing NSC rate is 6.8 percent. Now adding another 35 basis points to the NSC rate, i.e. 6.8% + .35% = 7.15%, the interest rate for the Floating Rate Savings Bonds 2020 (payable on January 1, 2021) was decided. Similarly, the new rates would be reset on Jan 1, 2021 depending upon the then NSC rate.</string>
    <string name="rbi4">The bonds can be purchased from designated branches of SBI, IDBI, HDFC, and ICICI bank and will be issued only as Bond Ledger Account.The bond can be bought in cash (up to Rs 20,000), demand draft, cheque, or through online payments. While there is no maximum limit for investment, the minimum requirement is only Rs 1,000.</string>
    <string name="rbi5">Return from your investments in Floating Rate Savings Bonds 2020 will be added to your income and taxed as per your tax slab.</string>
    <string name="rbi6">The bondholder/holders can make a nomination for the bond. The bond will be automatically transferred to the nominee/nominees upon his/her/their death. Meanwhile, it cannot be traded in the market or used as collateral for a loan.</string>
    <string name="rbi7">Since the Interest obtained on the bonds is taxable it is not a good option for people in the 30% tax bracket, but for people in lower brackets this can turn out to be a really good investment. Any investor looking for risk-free investments can consider to include the RBI Floating Rate Saving Bonds in their investment plan.</string>
    <string name="rbi8">For people in higher tax brackets or more those who are more risk tolerant can consider Corporate Bond Funds plans as they offer higher returns and are more liquid. The funds invest only in high rated PSU and Banking bonds and hence are highly safe but the returns on these funds can be affected by the prevailing interest rate.</string>
    <string name="tax1">Tax-free bonds are issued by a government enterprise to raise funds for a particular purpose. One example of these bonds is the municipal bonds. They offer a fixed interest rate and hence is a low-risk investment avenue. As the name suggests, its most attractive feature is its absolute tax exemption as per Section 10 of the Income Tax Act of India, 1961. Tax-free bonds generally have a long-term maturity of ten years or more. The government invests the money collected from these bonds in infrastructure and housing.</string>
    <string name="tax2">1. They carry an implicit sovereign guarantee (safer than bank FD) and currently yield around 4.5% tax-free.</string>
    <string name="tax3">2. PSU Bank FDs currently have yields of around 5% to 5.5%  pre-tax and just around 3% to 3.5% post-tax (highest tax slabs).</string>
    <string name="tax4">Tax free bonds can be a great option for investors in the higher tax bracket of 20% and above. While investing in tax free schemes one should not only consider the coupon value of the bond but also the Yield To Maturity (YTM) offered by the bond which depends upon the current price of the bond and the time remaining for the bond to mature. As these bonds are traded on exchanges one must use YTM as a measure for evaluating these bonds.</string>
    <string name="gsec1">A Government Security (G-Sec) is a tradable instrument issued by the Central Government or the State Governments. It acknowledges the Government’s debt obligation. Such securities are short term (usually called treasury bills, with original maturities of less than one year) or long term (usually called Government bonds or dated securities with original maturity of one year or more). In India, the Central Government issues both treasury bills and bonds or dated securities while the State Governments issue only bonds or dated securities, which are called the State Development Loans (SDLs).
G-Secs carry practically no risk of default and, hence, are called risk-free gilt-edged instruments.</string>
<string name="gsec2">Government bond in India is essentially a contract between the issuer and the investor, wherein the issuer guarantees interest earnings on the face value of bonds held by investors along with repayment of the principal value on a stipulated date.

Government Bonds India are primarily long term investment tools issued for periods ranging from 5 to 40 years. They are issued by both Central and State governments of India. Government bonds issued by State Governments are also called State Development Loans (SDLs).</string>
<string name="gsec3">Bonds Interest income is credited to your bank account. It is considered as income from other sources and taxes have to be paid as per the income tax slab. If there is any appreciation in the bond price, it is considered capital gains. Long-term (LTCG) is 10% flat or 20% with indexation. STCG is as per the applicable slab rate.

T-bills  The appreciation is considered as short-term capital gain, and taxes as is per the applicable slab rate.

In case of G-Secs gain is considered long-term (LTCG) if held for more than 3 years, otherwise it is short term capital gain (STCG).
</string>
    <string name="gsec4">If you are comfortable investing in a National Savings Certificate (NSC) or the Public Provident Fund (PPF) investing in GSecs won’t be a great issue for you. But Investments should be made only if you are looking for long term investments. Also as the Gsec market is maturing, in future GSecs can even find their way into short term investment portfolios. But for now you should only invest if you are comfortable in locking your investment for 5-10 years. </string>
<string name="gold1">SGBs are government securities denominated in grams of gold. They are substitutes for holding physical gold. Investors have to pay the issue price in cash and the bonds will be redeemed in cash on maturity. The Bond is issued by the Reserve Bank on behalf of the Government of India.
</string>
    <string name="gold2">The quantity of gold for which the investor pays is protected, since he receives the ongoing market price at the time of redemption/ premature redemption.

The SGB offers a superior alternative to holding gold in physical form.

The risks and costs of storage are eliminated. Investors are assured of the market value of gold at the time of maturity and periodical interest. SGB is free from issues like making charges and purity in the case of gold in jewellery form.

The only risk of holding a SGB is capital loss if the market price of gold declines. However, the investor does not lose in terms of the units of gold which he has paid for.</string>
<string name="gold3">Interest obtained is taxable as per tax bracket no TDS facility.
Redemption amount on maturity is exempted from tax.
Capital gains obtained from sale or transfer of bonds  are taxed and also have indexation benefits for Long Term Gains (Above 3 Years) </string>
    <string name="gold4">Having gold in one\'s portfolio will help in diversifying risks, particularly if one has a long-term investment horizon. But at the same time, one should not allocate more than 5-10% of the total portfolio in gold. Also one should not forget the coupon payments that are paid Bi-Anually and you can also hold these bonds as a collateral against a Loan.
</string>
    <string name="gold5">On maturity, the Gold Bonds shall be redeemed in Indian Rupees and the redemption price shall be based on simple average closing price of gold of 999 purity of previous 3 business days from the date of repayment, published by the India Bullion and Jewelers Association Limited.

Both interest and redemption proceeds will be credited to the bank account furnished by the customer at the time of buying the bond.
</string>
    <string name="corp1">Corporate bond funds are debt funds that lend at least 80% of their money to companies with the highest possible credit rating (Very low risk investments ). This rating is given only to companies that are financially strong and have a high probability of paying lenders on time.
</string>
    <string name="corp2">There are broadly two types of corporate bond a mutual fund invests in: \n
        1. Top-rated companies which have incredibly high CRISIL credit ratings. These are generally top public sector companies and Navratnas. \n
        2. Companies having a slightly lower credit rating of AA-
</string>
    <string name="corp3">The corporate bond funds are a really attractive investment choice because the returns that they produce with respect to the risk we undertake are very high. The success of the fund depends upon the kind of companies the fund invests into and how actively it is managed.Its is a good habit to research properly about the fund through reliable sources and invest accordingly. The investment period should not be more than 4 years as their returns are linked with the interest rate the investor must reevaluate his/her strategy and position on the investment.</string>
</resources>