<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Sovereign Gold Bonds"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gold1"/>

        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gold2"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="HIGHLIGHTS"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="1. Tenure: Maturity 8 Years , Early withdrawal from 5 Years."
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="2.Coupon Rate/ Interest Rate: 2.5% (Bi Annually)"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="3. Minimum Investment: 1 grams."
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="4. Maximum Investment: 4 Kilograms."
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="TAX TREATMENT"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gold3"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="OUR VIEW ON 54EC"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gold4"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gold5"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Amount interested to invest"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/gold_amount"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:background="@drawable/border_button"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Years (Min:5 and Max: 8 years)"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/gold_year"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:background="@drawable/border_button"/>
        <Button
            android:id="@+id/check_gold"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="Check Investment"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"/>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/gold_linear"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/gold_coupon"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:text="Coupon Payment of Rs. 100.00 every 12 months"
                android:gravity="left"
                android:textSize="18dp"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:id="@+id/gold_total_coupon"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:text="Total Coupon over the maturity: Rs. 500.00"
                android:gravity="left"
                android:textSize="18dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/gold_form"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Click for mor INFORMATION"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</ScrollView>