<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Tax Free Bonds"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/tax1"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="FEATURES"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="1. Tax-exemption"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="2. Low Risk Factors"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="3. No Liquidity"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="4. Issued through D-mat Acoount"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="5. Returns depend on the purchase price"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="6. ROI offered ranges between 5.50% to 6.50%"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Advantages"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/tax2"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/tax3"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="so tax-free bonds offer almost 30 to 40% higher yield as compared to bank FD.@string/tax3"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAllCaps="true"
            android:text="OUR VIEW ON Tax Free Bonds"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/tax4"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="No. of bonds"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/tax_number"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:background="@drawable/border_button"/>
        <Button
            android:id="@+id/check_tax"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="Check Investment"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"/>
        <TextView
            android:id="@+id/taxbond_info"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Click for more information"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</ScrollView>