<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Government Securities Bonds"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gsec1"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gsec2"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="FEATURES"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="1. Premium status w.r.t the stability of funds"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="2. Disbursed every six months"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="3. Can exit the investment by selling it"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="4. Long term 10-50 Years"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="5. Coupon Rate: 5% to 9%"
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:text="6. Coupon Payment Frequency: 6 months "
            android:gravity="left"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Tax Treatment"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gsec3"/>
        <TextView
            android:id="@+id/taxbond_info"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAllCaps="true"
            android:text="OUR VIEW ON GSEC Bonds"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/gsec4"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Amount to be invested"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/gov_amount"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:background="@drawable/border_button"/>
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="No. of bonds"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/gov_number"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:background="@drawable/border_button"/>
        <Button
            android:id="@+id/check_gov"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="Check Investment"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"/>
        <TextView
            android:id="@+id/gsec_info"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Click for more information"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</ScrollView>